force-app/main/default/objects/RingCentral_Call__c/RingCentral_Call__c.object-meta.xml
<CustomObject>
    <label>RingCentral Call</label>
    <nameField>
        <label>RingCentral Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RingCentral Calls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>