force-app/main/default/objects/RingCentral_Call__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>RingCentral Calls</relationshipLabel>
    <relationshipName>RingCentral_Calls</relationshipName>
    <type>Lookup</type>
</CustomField>