force-app/main/default/objects/RingCentral_Call__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>RingCentral Calls</relationshipLabel>
    <relationshipName>RingCentral_Calls</relationshipName>
    <type>Lookup</type>
</CustomField>