force-app/main/default/objects/RingCentral_Call__c/fields/Direction__c.field-meta.xml
<CustomField>
    <fullName>Direction__c</fullName>
    <formula>if(find(&apos;+&apos;,From_Name__c)&gt;0,

if(contains( From_Name__c ,&apos;Outbound&apos;), &apos;Outbound&apos;, &apos;Inbound&apos;),
&apos;Internal&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Direction</label>
    <type>Text</type>
</CustomField>