force-app/main/default/objects/RingCentral_Call__c/fields/Recording_Size__c.field-meta.xml
<CustomField>
    <fullName>Recording_Size__c</fullName>
    <label>Recording Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>