force-app/main/default/objects/RingCentral_Call__c/fields/RingCentral_ID__c.field-meta.xml
<CustomField>
    <fullName>RingCentral_ID__c</fullName>
    <formula>SUBSTITUTE( Name ,&apos;.mp3&apos;, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RingCentral ID</label>
    <type>Text</type>
</CustomField>