force-app/main/default/objects/RingCentral_Call__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Call</fullName>
                <default>true</default>
                <label>New Call</label>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
            <value>
                <fullName>Submitted For Transcription</fullName>
            </value>
            <value>
                <fullName>Transcribed</fullName>
            </value>
            <value>
                <fullName>Not Transcribing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>