force-app/main/default/objects/RingCentral_Call__c/fields/TestRollup__c.field-meta.xml
<CustomField>
    <fullName>TestRollup__c</fullName>
    <description>TestRollup</description>
    <inlineHelpText>TestRollup</inlineHelpText>
    <label>TestRollup</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>