force-app/main/default/objects/RingCentral_Call__c/fields/To_Name__c.field-meta.xml
<CustomField>
    <fullName>To_Name__c</fullName>
    <label>To Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>