force-app/main/default/objects/RingCentral_Call__c/fields/To_Phone__c.field-meta.xml
<CustomField>
    <fullName>To_Phone__c</fullName>
    <formula>if(find(&apos;+&apos;,From_Name__c)&gt;0,

mid( From_Name__c, find(&apos;_&apos;,From_Name__c,15)+3 ,3) + &quot;-&quot; + mid( From_Name__c, find(&apos;_&apos;,From_Name__c,15)+6 ,3) + &quot;-&quot; + mid( From_Name__c, find(&apos;_&apos;,From_Name__c,15)+9 ,4),

mid( From_Name__c, find(&apos;_&apos;,From_Name__c,15)+1 ,3)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>To Phone</label>
    <type>Text</type>
</CustomField>