force-app/main/default/objects/RingCentral_Call__c/fields/Transcript__c.field-meta.xml
<CustomField>
    <fullName>Transcript__c</fullName>
    <label>Transcript</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>