force-app/main/default/objects/RingCentral_Call__c/fields/ViewAccess__c.field-meta.xml
<CustomField>
    <fullName>ViewAccess__c</fullName>
    <formula>$Profile.Id = &apos;00e46000000pIxv&apos;</formula>
    <label>ViewAccess</label>
    <type>Checkbox</type>
</CustomField>